--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,17 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "sourceMap": true,
+              "aot": false,
+              "buildOptimizer": false
             }
           }
         },
