--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ag-grid-angular": "^20.2.0",
     "ag-grid-community": "^20.2.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
